--- a/notebook/01_eda.ipynb
+++ b/notebook/01_eda.ipynb
@@ -1026,29 +1026,46 @@
    "id": "ca486c45",
    "metadata": {},
    "source": [
-    "## 클러스터링 결과 요약\n",
+    "## 클러스터 해석 결과\n",
     "\n",
-    "K-Means(n=3) 기반 학습행동 클러스터링 결과,\n",
-    "전체 학생은 다음과 같이 분류되었다.\n",
+    "K-Means 기반 학습행동 클러스터링 결과, 학생은 다음 3유형으로 분류되었다.\n",
     "\n",
-    "- Cluster 0: 38명 (47.5%)\n",
-    "- Cluster 1: 31명 (38.8%)\n",
-    "- Cluster 2: 11명 (13.7%)\n",
+    "### Cluster 2 — 고참여 성취형\n",
+    "- 학습시간 최고 (6.64)\n",
+    "- 과제 제출률 높음 (0.87)\n",
+    "- LMS 접속 최다 (21.8)\n",
+    "- 결석 최저\n",
     "\n",
-    "Cluster 0과 1은 전체의 약 86%를 차지하는 일반 학습군으로 해석되며,\n",
-    "Cluster 2는 소수 집단으로 학습 참여도 및 성취도 측면에서\n",
-    "집중 관리가 필요한 위험군일 가능성이 높다.\n",
+    "→ 전형적인 성실·고성취 학습자 집단\n",
     "\n",
-    "### 교육 현장 적용 시사점\n",
+    "---\n",
     "\n",
-    "- Cluster 2에 속한 학생은 결석, 과제 제출률, LMS 참여도 등의\n",
-    "  학습행동 지표를 기준으로 조기 탐지하여 상담 및 보충학습 개입이 필요하다.\n",
+    "### Cluster 1 — 저시간 효율형\n",
+    "- 학습시간 최저 (2.29)\n",
+    "- 과제 제출률 높음 (0.86)\n",
+    "- 결석 낮음\n",
     "\n",
-    "- Cluster 1은 참여도는 있으나 성취도 변동성이 존재할 수 있으므로\n",
-    "  학습 피드백 강화 및 과제 수행 관리가 요구된다.\n",
+    "→ 학습시간은 적으나 과제 수행 중심 학습 패턴\n",
     "\n",
-    "- Cluster 0은 전반적으로 안정적인 학습행동을 보이므로\n",
-    "  지속적인 동기부여와 심화학습 기회를 제공하는 것이 바람직하다."
+    "---\n",
+    "\n",
+    "### Cluster 0 — 저참여 위험군\n",
+    "- 과제 제출률 최저 (0.66)\n",
+    "- 결석 최고 (1.04)\n",
+    "\n",
+    "→ 참여도 및 출결 관리가 필요한 위험군\n",
+    "\n",
+    "\n",
+    "## 교육 현장 적용 시사점\n",
+    "\n",
+    "1. Cluster 0(위험군) 학생을 과제 제출률 및 출결 기반으로 조기 탐지하여\n",
+    "   상담 및 보충학습 개입이 필요하다.\n",
+    "\n",
+    "2. Cluster 1은 학습시간 대비 과제 수행은 양호하므로\n",
+    "   개념 이해 심화 학습 자료 제공이 효과적일 수 있다.\n",
+    "\n",
+    "3. Cluster 2는 자기주도 학습 역량이 높아\n",
+    "   심화 과제 및 프로젝트 기반 학습에 적합하다.\n"
    ]
   }
  ],
