feat: 배포용 환경변수, 하드코딩 제거. fix: 백엔드 디렉터리 정리 및 참조 경로 전부 다 수정. (디렉터리 관리는 처음부터 잘 할것.)

--- a/notebook/02_risk_prediction.ipynb
+++ b/notebook/02_risk_prediction.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
  "cells": [
   {
    "cell_type": "markdown",
@@ -57,7 +57,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# 전처리 모듈\n",
-    "from src.preprocessing import load_csv, preprocess_pipeline\n"
+    "from backend.src.preprocessing import load_csv, preprocess_pipeline\n"
    ]
   },
   {
@@ -2406,3 +2406,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
