--- a/notebook/01_eda.ipynb
+++ b/notebook/01_eda.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
  "cells": [
   {
    "cell_type": "markdown",
@@ -111,7 +111,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.preprocessing import load_csv, preprocess_pipeline\n"
+    "from backend.src.preprocessing import load_csv, preprocess_pipeline\n"
    ]
   },
   {
@@ -1299,3 +1299,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
