--- a/notebook/_legacy_00_generate_dummy_dataset.ipynb
+++ b/notebook/_legacy_00_generate_dummy_dataset.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
  "cells": [
   {
    "cell_type": "markdown",
@@ -587,7 +587,7 @@
     "- 사용할 수 있는 점수 컬럼들만 평균으로 합성\n",
     "- 결석 조건은 단순화(결석>=1/3)\n",
     "\n",
-    "> 이 라벨 생성은 추후 `src/modeling.py`에서 동일 원리로 적용할 수 있습니다.\n"
+    "> 이 라벨 생성은 추후 `backend/src/modeling.py`에서 동일 원리로 적용할 수 있습니다.\n"
    ]
   },
   {
@@ -1264,3 +1264,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
